--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "projects/core-estimator"]
 	path = projects/core-estimator
-	url = git://github.com/oftn/core-estimator.git
+	url = https://github.com/oftn/core-estimator.git
